samples/_failures_safe/1761244914_b83bc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0f30b34.c: In function ‘main’:
./samples/SAFE/__tmp_a0f30b34.c:159:5: error: expected expression at end of input
  159 |     double ratio = (input_len > 0) ?
      |     ^~~~~~
./samples/SAFE/__tmp_a0f30b34.c:159:5: error: expected declaration or statement at end of input
